@@ -20,6 +20,8 @@
 #include "config.h"
 #include "NetworkStateNotifier.h"
 
+#if PLATFORM(QT) && ENABLE(QT_BEARER)
+
 #include "NetworkStateNotifierPrivate.h"
 #include "qnetworkconfigmanager.h"
 
@@ -88,5 +90,7 @@ void NetworkStateNotifier::setNetworkAccessAllowed(bool isAllowed)
 }
 
 } // namespace WebCore
+
+#endif
 
 #include "moc_NetworkStateNotifierPrivate.cpp"
