@@ -2,6 +2,16 @@
 
         Reviewed by Simon Hausmann.
 
+        [Qt] Fix compilation with QT_NO_BEARERMANAGEMENT
+        https://bugs.webkit.org/show_bug.cgi?id=38324
+
+        * platform/network/NetworkStateNotifier.h:
+        * platform/network/qt/NetworkStateNotifierQt.cpp:
+
+2010-05-02  Tasuku Suzuki  <tasuku.suzuki@nokia.com>
+
+        Reviewed by Simon Hausmann.
+
         [Qt] Fix compilation with QT_NO_LINEEDIT
         https://bugs.webkit.org/show_bug.cgi?id=38324
 
